--- a/src/aces/webctrl/mfa/resources/MainPage.html
+++ b/src/aces/webctrl/mfa/resources/MainPage.html
@@ -161,11 +161,53 @@
         while (whitelistBody.children.length>1){
           whitelistBody.removeChild(whitelistBody.firstElementChild);
         }
+        const otpBody = document.getElementById("otpBody");
+        otpBody.replaceChildren();
         for (const x of data["mappings"]){
           addMapping(x["user"], x["email"]);
         }
         for (const x of data["whitelist"]){
           addWhitelist(x);
+        }
+        for (const x of data["otps"]){
+          const tr = document.createElement("TR");
+          const tdOperator = document.createElement("TD");
+          tdOperator.innerText = x;
+          tr.appendChild(tdOperator);
+          const tdActions = document.createElement("TD");
+          const delBut = document.createElement("BUTTON");
+          delBut.innerText = "Delete";
+          delBut.className = "e";
+          delBut.onclick = ()=>{
+            if (!changeAllowed){
+              return;
+            }
+            delBut.disabled = true;
+            disableChanges();
+            const req = new XMLHttpRequest();
+            req.open("POST","__PREFIX__/index?action=deleteOTP");
+            req.setRequestHeader("content-type", "application/x-www-form-urlencoded");
+            req.timeout = 10000;
+            req.onreadystatechange = function(){
+              if (this.readyState===4){
+                if (this.status===200){
+                  otpBody.removeChild(tr);
+                  setStatus("lightgreen","Successful.");
+                }else if (this.status==0){
+                  setStatus("red","Request timed out.");
+                }else{
+                  setStatus("red","HTTP Error "+this.status);
+                }
+                delBut.disabled = false;
+                enableChanges();
+              }
+            };
+            setStatus("white","Deleting...");
+            req.send("user="+encodeURIComponent(x));
+          };
+          tdActions.appendChild(delBut)
+          tr.appendChild(tdActions);
+          otpBody.appendChild(tr);
         }
       }
       function disableChanges(){
@@ -350,6 +392,14 @@
       <button class="e" id="loadButton" onclick="load()">Discard Changes</button>
       <br>
       <a class="e" href="__DOCUMENTATION__" target="_blank" style="display:inline-block;margin-top:0.4em">Documentation</a>
+      <br><br>
+      <table>
+        <thead>
+          <tr><th colspan="2">Authenticator Mappings</th></tr>
+          <tr><th>Operator</th><th>Actions</th></tr>
+        </thead>
+        <tbody id="otpBody"></tbody>
+      </table>
       <span id="hiddenSpan" style="min-width:2.5em;color:black;display:inline-block;position:absolute;left:-100000px;white-space:pre"></span>
     </div>
     <script>
