update README and minor refactoring

--- a/root/webapp/documentation.html
+++ b/root/webapp/documentation.html
@@ -2963,7 +2963,7 @@ body,
 <h2 id="installation">Installation</h2>
 <ol>
 <li>
-<p>If your server requires signed add-ons, copy the authenticating certificate <a href="https://github.com/automatic-controls/addon-dev-script/blob/main/ACES.cer?raw=true"><em>ACES.cer</em></a> to the <em>./addons</em> directory of your WebCTRL installation folder.</p>
+<p>If your server requires signed add-ons, copy the authenticating certificate <a href="https://github.com/automatic-controls/addon-dev-script/blob/main/ACES.cer?raw=true"><em>ACES.cer</em></a> to the <em>./programdata/addons</em> directory of your WebCTRL installation folder.</p>
 </li>
 <li>
 <p>Install <a href="https://github.com/automatic-controls/mfa-addon/releases/latest/download/MFA.addon"><em>MFA.addon</em></a> using the WebCTRL interface.</p>
